--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-block d-lg-none">Salman Farhat</span>
+                <span class="d-none d-lg-block"><img src="me.jpg"class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Me" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -28,9 +28,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">My Research</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
                 </ul>
             </div>
         </nav>
@@ -40,19 +40,20 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Salman
+                        <span class="text-primary">Farhat</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Avenue Paul Langevin, Villeneuve D'ascq
+                        <a href="mailto:name@email.com">salman.farhat@inria.fr</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">A motivated researcher with problem-solving and critical thinking skills,
+                       as well as meticulous attention to details and methodical nature.
+                       <br/>Currently, I'm doing a Ph.D. at Inria laboratory on a <b>subject entitled Safe Dynamic Reconfiguration of cloud applications</b></p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.linkedin.com/in/salman-farhat-b854b6181/" class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/salmanfarhat1" class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/salman.farhat.12935" class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -63,36 +64,55 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Ph.D</h3>
+                            <div class="subheading mb-3">Inria</div>
+                            <p> The goal of this research project is to design a novel framework for safe dynamic reconfiguration of cloud applications
+                              by integrating into the platform software and extending the coordination mechanisms proposed by JavaBIP.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Research Intern</h3>
+                            <div class="subheading mb-3">LIG - Grenoble Informatics Laboratory</div>
+                            <p>Distributed Learning in the Presence of Byzantine Faults:
+                              <ul>
+                                <li>Study the state-of-the-art in the fields of Distributed Learning Systems and Byzantine-resilient Systems</li>
+                                <li>Assess the impact of Byzantine failures on Distributed Learning Systems</li>
+                                <li>Propose algorithms and techniques to deal with Byzantine Failures in Distributed Learning Systems</li>
+                                <li>Implement and evaluate the proposed algorithms</li>
+                              </ul>
+</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2020 - Sep 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Research Intern</h3>
+                            <div class="subheading mb-3">LIG - Grenoble Informatics Laboratory</div>
+                            <p>Ipanema is a domain-specific language to define schedulers of processes, and the characteristics for process scheduling on a multi-core system.
+Ipanema is based on Bossa, a language allowing to write safe user-defined scheduling policies on single-core systems.
+</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Jul 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Full Stack Web Trainee </h3>
+                            <div class="subheading mb-3">SE Factory </div>
+                            <p>SE Factory is an intensive full-stack web development Bootcamp that has been running since February 2016 in Beirut, Lebanon</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jul 2018 - Sep 2018</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Freelance </h3>
+                            <div class="subheading mb-3">Lebanese University </div>
+                            <p>Software that detects the ID number of the Lebanese University ID card to manage attendance. It was implemented using Python language</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2018 - Jun 2018</span></div>
+                    </div>
+
                 </div>
             </section>
             <hr class="m-0" />
@@ -102,26 +122,36 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of Lille</h3>
+                            <div class="subheading mb-3">Ph.D </div>
+                            <div>Safe dynamic reconfiguration of cloud applications</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Université Grenoble Alpes</h3>
+                            <div class="subheading mb-3">Master's degree </div>
+                            <div>Computer science - Parallel and Distributed Systems</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018 - 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Lebanese University</h3>
+                            <div class="subheading mb-3">Bachelor degree</div>
+                            <div>Computer Science</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015 - 2018</span></div>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
-            <section class="resume-section" id="skills">
+
+
+
+            <!-- <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
@@ -160,18 +190,30 @@
                     </ul>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" /> -->
+
+
+
+
+
+
             <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="research">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Research</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
             <hr class="m-0" />
+
+
+
+
+
+
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <!-- <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
@@ -215,7 +257,7 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
