--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <p class="lead mb-5">A motivated researcher with problem-solving and critical thinking skills,
                        as well as meticulous attention to details and methodical nature.
-                       <br/>Currently, I'm doing a Ph.D. at Inria laboratory on a <b>subject entitled Safe Dynamic Reconfiguration of cloud applications</b></p>
+                       <br/>Currently, I'm doing a Ph.D. at Inria laboratory on a subject entitled<b> Safe Dynamic Reconfiguration of cloud applications</b></p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/salman-farhat-b854b6181/" class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://github.com/salmanfarhat1" class="social-icon" href="#!"><i class="fab fa-github"></i></a>
