--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@ Ipanema is based on Bossa, a language allowing to write safe user-defined schedu
             <section class="resume-section" id="research">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Research</h2>
-                    <p>Design a model transformation tool to transform feature models (static model) into a component-based variability model (runtime model).
+                    <p>Design a model transformation to transform feature models (static model) into a component-based variability model (runtime model).
                        Information about the design can be found <a href="https://github.com/salmanfarhat1/Design-of-the-model-transformation-tool/blob/main/main.pdf" target="_blank">here</a>
                      </p>
-                     <p>Implementation of the model transformation tool can be found <a href="https://zenodo.org/record/5680389#.Ye_mqS1Q2jg" target="_blank">here</a>
+                     <p>Implementation of the model transformation can be found <a href="https://zenodo.org/record/5680389#.Ye_mqS1Q2jg" target="_blank">here</a>
                       </p>
                 </div>
             </section>
